Some rearrangement on MoodBar CSS/HTML: fix issue in Chrome where the textarea border was broken, adjust alignment
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@92806 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/ext.moodBar/ext.moodBar.core.css
+++ b/modules/ext.moodBar/ext.moodBar.core.css
@@ -125,3 +125,10 @@
 .mw-moodBar-types-select .mw-moodBar-type-confused.mw-moodBar-selected {
 	background-image: url(images/type-confused-selected.png);
 }
+
+.mw-moodBar-form {
+	padding-right: 5px;
+}
+.mw-moodBar-formInputs {
+	padding-left: 2em;
+}
